--- a/index.html
+++ b/index.html
@@ -106,9 +106,9 @@
     <section>
       <h2>Screenshots</h2>
       <div class="screenshots">
-        <img src="screenshot1.jpg" alt="Screenshot 1">
-        <img src="screenshot2.jpg" alt="Screenshot 2">
-        <img src="screenshot3.jpg" alt="Screenshot 3">
+        <img src="https://imgur.com/a/yxtw6po" alt="Screenshot 1">
+        <img src="https://imgur.com/a/kL3Wdk0" alt="Screenshot 2">
+        <img src="https://imgur.com/a/r9wBXjT" alt="Screenshot 3">
       </div>
     </section>
   </main>
